Added select experiences

--- a/_includes/single-publication.html
+++ b/_includes/single-publication.html
@@ -12,9 +12,15 @@
 
     <div class="publication-buttons">
         {% if post.paper_url %}
-        <a href="{{ post.paper_url }}" class="publication-button" target="_blank">
-            <i class="fas fa-file-alt"></i> Read Paper
-        </a>
+            <a href=
+                {% if post.paper_url contains "://" %} 
+                    "{{ post.paper_url }}" 
+                {% else %} 
+                    "{{ post.paper_url | prepend: base_path }}" 
+                {% endif %}  
+            class="publication-button" target="_blank">
+                <i class="fas fa-file-alt"></i> Read Paper
+            </a>
         {% endif %}
 
         {% if post.slides_url %}
