Add HotOS and ISMAR papers

--- a/_includes/single-publication.html
+++ b/_includes/single-publication.html
@@ -19,7 +19,7 @@
                     "{{ post.paper_url | prepend: base_path }}" 
                 {% endif %}  
             class="publication-button" target="_blank">
-                <i class="fas fa-file-alt"></i> Read Paper
+                <i class="fas fa-file-alt"></i> Paper
             </a>
         {% endif %}
 
