--- a/_includes/single-misc-card.html
+++ b/_includes/single-misc-card.html
@@ -14,7 +14,7 @@
     <p class="misc-date">{{ post.date | date: "%-d %B %Y" }}</p>
     <p class="misc-abstract">
         <span style="color: grey;">
-            {{ post.abstract }}
+            {{ post.abstract | markdownify }}
         </span>
     </p>
 
@@ -100,11 +100,11 @@
     }
 
     .misc-tag[data-tag*="art"] {
-        background-color: #60ab6e;
+        background-color: #4cba42;
     }
 
     .misc-tag[data-tag*="story"] {
-        background-color: #baad5d;
+        background-color: #5dba71;
     }
 
     .misc-button {
